# slack-cli

./: README.md  pyproject.toml
src/slack_cli/: cli.py  client.py  config.py  output.py  pagination.py  permalink.py  tokens.py  transform.py  validation.py
src/slack_cli/auth/: command.py  cookies.py  extract.py  workspace.py
src/slack_cli/commands/: read.py  search.py
tests/: test_auth_cookies.py  test_auth_extract.py  test_auth_workspace.py  test_cli_auth.py  test_client.py  test_commands.py  test_config.py  test_e2e.py  test_output.py  test_pagination.py  test_permalink.py  test_search_messages.py  test_tokens.py  test_transform.py  test_validation.py
