[project]
name = "slack-cli"
version = "0.1.0"
description = "Read-only Slack CLI for coding agents, using xoxc/xoxd session tokens."
readme = "README.md"
authors = [
    { name = "jjovalle99", email = "jjmov99@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "ccl-chromium-reader",
    "cryptography>=46.0.6",
    "cyclopts>=3.9",
    "httpx>=0.28",
    "markdownify>=1.2.2",
]

[project.scripts]
slack-cli = "slack_cli.cli:main"

[build-system]
requires = ["uv_build>=0.10.3,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "coverage>=7.13.5",
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "ruff>=0.11",
    "ty>=0.0.28",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "ANN"]
ignore = []

[tool.ty.terminal]
error-on-warning = true

[tool.uv.sources]
ccl-chromium-reader = { git = "https://github.com/cclgroupltd/ccl_chromium_reader.git", rev = "552516720761397c4d482908b6b8b08130b313a1" }
